@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/webkit-gtk
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.110 2011/06/11 16:18:12 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.111 2011/06/12 09:09:23 nirbheek Exp $
+
+  12 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
+  webkit-gtk-1.4.1-r200.ebuild, webkit-gtk-1.4.1-r300.ebuild:
+  Add proper introspection deps, fixes bug 371143
 
   11 Jun 2011; Raúl Porcel <armin76@gentoo.org> webkit-gtk-1.4.1-r200.ebuild,
   webkit-gtk-1.4.1-r300.ebuild:
